# intake-esm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Contributors Guide.ipynb  GMET-Example.ipynb  LICENSE  MANIFEST.in  MPIGE.ipynb  Makefile  README.md  README.rst  codecov.yml  era5.ipynb  profile_intake_esm_pascal.py  pyproject.toml  readthedocs.yml  requirements.txt  sandbox.ipynb  setup.cfg  setup.py  to_datset_dict_test.ipynb  tox.ini  versioneer.py
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  pull-request-template.md
.github/workflows/: ci.yaml  linting.yaml  main.yaml  pypi.yml
binder/: environment.yml
ci/: environment-dev-2.7.yml  environment-dev-3.6.yml  environment-dev-3.7-dev.yml  environment-dev-3.7.yml  environment-dev-3.8.yml  environment-docs.yml  environment-upstream-dev.yml  environment.yml  install-circle.sh  upload-anaconda.sh
docs/: docs.yml  environment.yml  requirements.txt
docs/sample_data/cesm-le/: b.e11.B1850C5CN.f09_g16.005.pop.h.SHF.130001-139912.nc  b.e11.B1850C5CN.f09_g16.005.pop.h.SHF.170001-179912.nc  b.e11.B1850C5CN.f09_g16.005.pop.h.STF_O2.080001-089912.nc  b.e11.B1850C5CN.f09_g16.005.pop.h.STF_O2.090001-099912.nc  b.e11.B1850C5CN.f09_g16.005.pop.h.STF_O2.100001-109912.nc  b.e11.B1850C5CN.f09_g16.005.pop.h.STF_O2.160001-169912.nc  (+40 more)
docs/source/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  api.md  api.rst  building-collections.ipynb  catalogs.yaml  cesm.rst  cli.rst  cmip_ap.md  cmip_ap.rst  cmip_collection_input.yml  cmip_collection_input_test.yml  conf.py  configuration.rst  contributing.rst  examples.rst  faq.rst  getting-started.ipynb  index.md  index.rst  installation.md  installation.rst  tutorial.rst  usage.rst
example_input/: collection_input_cesm1_le.yml  collection_input_cesm_dple.yml  collection_input_cmip6_cesm.yml
intake_cesm/: __init__.py  _version.py  cat.py  cesm_cat.py  cesm_definitions.yml  collection_input_cesm_dple.yml  collections.py  collections.yml  common.py  config.py  core.py  manage_collections.py
intake_cesm/collections/: cesm_dple.csv
intake_cesmle/: __init__.py  _version.py  database.py
intake_esm/: __init__.py  _imports.py  _search.py  _types.py  _util.py  _version.py  aggregate.py  bld_collection_utils.py  bluelink.py  cafe.py  cat.py  cesm.py  cesm_aws.py  cesm_definitions.yml  cli.py  cmip.py  collection.py  common.py  config.py  config.yaml  cordex.py  core.py  data_source.py  definition_utils.py  derived.py  derived_variable.py  entry.py  era5.py  gmet.py  logging_util.py  main.py  manage_collections.py  merge_util.py  models.py  mpige.py  search.py  source.py  storage.py  tutorial.py  utils.py
intake_esm/collection_defs/: bluelink.yaml  cesm-aws.yaml  cesm.yaml  cmip.yaml  cordex.yaml  era5.yaml  gmet.yaml  mpige.yaml  sources.yaml
tests/: __init__.py  cafe-test.yml  cafe.yml  catalog-dict-records.json  catalog.yaml  cesm1-le_collection-input.yml  cesm1-lens-netcdf.json  cesm1-lens-zarr.json  cesm_catalog.yaml  cmip5-netcdf.csv  cmip5-netcdf.json  cmip5_catalog.yaml  cmip5_collection_input_test.yml  cmip6-netcdf.json  cmip6_collection_input_test.yml  cmip_catalog.yaml  cmip_collection_input_test.yml  collection_input_test.yml  conftest.py  copy-to-cache-collection-input.yml  ensure-file-hsi-transfer-collection-input.yml  era5-test.yml  gmet-list.yml  gmet-test.yml  gmet.yml  gmet_v2_collection_input_test.yml  input-filelist-test.txt  intake-cesm-test-filelist  mpi-ge.yml  mpi-ge_collection-input.yml  mpi_filelist.txt  my_registry.py  pangeo-cmip6-zarr.json  test_aggregate.py  test_bld_collection_utils.py  test_cafe.py  test_cat.py  test_cesm.py  test_cli.py  test_cmip.py  (+22 more)
tests/cesm/: cesm1-le_collection-input.yml  cesm1-lens-aws-zarr.csv  cesm1-lens-netcdf.csv  cesm1-lens-netcdf.json  cesm1-lens-zarr.json  cesm_catalog.yaml  cesm_dple.csv  collection_input_test.yml  test_cesm.py  test_cesm_aws.py
tests/cesm_aws/: cesm1-le_aws_collection-input.yml  test_cesm_aws.py
tests/cmip5/: cmip5-netcdf.csv  cmip5-netcdf.json  cmip5_catalog.yaml  cmip5_collection_input_test.yml  test_cmip5.py
tests/cmip6/: cmip6-netcdf-test.csv  cmip6-netcdf.json  cmip6-zarr-consolidated-stores.csv  cmip6_collection_input_test.yml  pangeo-cmip6-zarr.json  storelist.txt  test_cmip6.py  test_cmip6_gs.py
tests/cordex/: cordex-collection-input.yaml
tests/era5/: era5-test.yml  era5.yml  test_era5.py
tests/gmet/: gmet-test.yml  gmet.yml  gmet_v2_filelist.txt  test_gmet.py
tests/mpige/: mpi-ge.yml  mpi-ge_collection-input.yml  mpi_filelist.txt  test_mpige.py
tests/sample-catalogs/: access-columns-with-iterables.json  access-columns-with-lists.json  access-columns-with-sets.csv  access-columns-with-sets.json  access-columns-with-tuples.csv  access-columns-with-tuples.json  access-single-item-iterables.csv  access-single-item-iterables.json  bad.json  catalog-dict-records-noagg.json  catalog-dict-records.json  cesm1-lens-netcdf.json  cesm1-lens-zarr.json  cesm1-lens-zarr2.json  cesm1-lens-zarr3.json  cmip5-netcdf-parquet.json  cmip5-netcdf.json  cmip5-netcdf.parquet  cmip6-bcc-mixed-formats.json  cmip6-netcdf-noagg.json  cmip6-netcdf.json  multi-variable-hardcoded-catalog.json  noaa-pathfinder-opendap.json  pangeo-cmip6-zarr.json  pangeo-gcp-subset.json
tests/sample-collections/: bad.json  catalog-dict-records.json  cesm1-lens-netcdf.json  cesm1-lens-zarr.json  cmip5-netcdf.csv  cmip5-netcdf.json  cmip6-bcc-mixed-formats.csv  cmip6-netcdf.json  glade-cmip6-netcdf.csv  multi-variable-catalog.csv  pangeo-cmip6-zarr.json  pangeo-gcp-subset.json  tiny.yml
tests/sample_data/: g.e11_LENS.GECOIAF.T62_g16.009.pop.h.ECOSYS_XKW.024901-031612.nc  g.e11_LENS.GECOIAF.T62_g16.009.pop.h.ecosys.nday1.CaCO3_form_zint.02490101-03161231.nc  tiny.nc
tests/test_collections/: cesm_dple_test_collection.csv
tutorial-catalogs/: AWS-CESM2-LENS.json  AWS-CMIP6.json  GOOGLE-CMIP6.json
(+446 files in other folders)
